Fixed issues  - Added filter criteria for group consultation  - added sanity check for double appointment booking issue  - fixed sonar issues